@startuml Mini-ChatGPT_BaseDonnees

!define ABSTRACT abstract
!theme plain

skinparam backgroundColor #FFFFFF
skinparam classBackgroundColor #F5F5F5
skinparam classBorderColor #333333
skinparam classArrowColor #333333
skinparam arrowColor #333333
skinparam classFontColor #000000
skinparam classFontSize 10
skinparam arrowFontSize 9
skinparam noteFontSize 9
skinparam linetype ortho

' ==================== TABLES ====================

class users as "👤 UTILISATEURS" {
  {id} id: BIGINT <<PK>>
  {field} email: VARCHAR(255) <<UK>>
  {field} name: VARCHAR(255)
  {field} password: VARCHAR(255)
  {field} email_verified_at: TIMESTAMP
  {field} two_factor_secret: LONGTEXT
  {field} two_factor_recovery_codes: LONGTEXT
  {field} remember_token: VARCHAR(100)
  {field} created_at: TIMESTAMP
  {field} updated_at: TIMESTAMP
}

class conversations as "💬 CONVERSATIONS" {
  {id} id: BIGINT <<PK>>
  {field} user_id: BIGINT <<FK>>
  {field} title: VARCHAR(255)
  {field} selected_model_id: BIGINT <<FK, NULL>>
  {field} summary: LONGTEXT <<NULL>>
  {field} message_count: INT <<DEFAULT: 0>>
  {field} is_title_generated: BOOLEAN <<NOUVEAU>>
  {field} last_message_at: TIMESTAMP <<NOUVEAU, NULL>>
  {field} created_at: TIMESTAMP
  {field} updated_at: TIMESTAMP
  {field} deleted_at: TIMESTAMP <<SUPPRESSION_LOGIQUE>>
}

class messages as "📝 MESSAGES" {
  {id} id: BIGINT <<PK>>
  {field} conversation_id: BIGINT <<FK>>
  {field} model_id: BIGINT <<FK, NULL>> <<MODIFIÉ>>
  {field} role: ENUM(user, assistant)
  {field} content: LONGTEXT
  {field} tokens_used: INT <<NULL>>
  {field} status: ENUM(pending, completed, failed)
  {field} model_response_id: VARCHAR(255) <<NOUVEAU, NULL>>
  {field} finished_reason: VARCHAR(50) <<NOUVEAU, NULL>>
  {field} completed_at: TIMESTAMP <<NOUVEAU, NULL>>
  {field} created_at: TIMESTAMP
  {field} updated_at: TIMESTAMP
}

class llm_models as "🤖 MODELES_LLM" {
  {id} id: BIGINT <<PK>>
  {field} name: VARCHAR(255)
  {field} provider: ENUM(openai, google, anthropic)
  {field} model_identifier: VARCHAR(255) <<UK>>
  {field} description: TEXT <<NULL>>
  {field} capabilities: JSON <<NULL>>
  {field} is_active: BOOLEAN <<DEFAULT: TRUE>>
  {field} max_tokens: INT <<DEFAULT: 4096>>
  {field} temperature: DECIMAL(3,2) <<DEFAULT: 0.7>>
  {field} created_at: TIMESTAMP
  {field} updated_at: TIMESTAMP
}

class custom_instructions as "⚙️ INSTRUCTIONS_PERSONNALISEES" {
  {id} id: BIGINT <<PK>>
  {field} user_id: BIGINT <<FK>>
  {field} name: VARCHAR(100) <<NOUVEAU, NULL>>
  {field} model_id: BIGINT <<FK, NULL>>
  {field} system_prompt: LONGTEXT
  {field} is_active: BOOLEAN <<DEFAULT: TRUE>>
  {field} priority: INT <<DEFAULT: 0>>
  {field} created_at: TIMESTAMP
  {field} updated_at: TIMESTAMP
}

class api_keys as "🔐 CLES_API" {
  {id} id: BIGINT <<PK>>
  {field} user_id: BIGINT <<FK>>
  {field} provider: ENUM(openai, google, anthropic) <<MODIFIÉ>>
  {field} encrypted_key: LONGTEXT
  {field} model_name: VARCHAR(255) <<NULL>>
  {field} key_hint: VARCHAR(20) <<NOUVEAU, NULL>>
  {field} is_active: BOOLEAN <<DEFAULT: TRUE>>
  {field} last_verified_at: TIMESTAMP <<NOUVEAU, NULL>>
  {field} created_at: TIMESTAMP
  {field} updated_at: TIMESTAMP
}

class model_configs as "⚙️ CONFIG_MODELES" {
  {id} id: BIGINT <<PK>>
  {field} model_id: BIGINT <<FK>>
  {field} config_key: VARCHAR(255)
  {field} config_value: LONGTEXT
  {field} created_at: TIMESTAMP
  {field} updated_at: TIMESTAMP
}

class streaming_sessions as "⚡ SESSIONS_STREAMING" {
  {id} id: BIGINT <<PK>> <<NOUVEAU>>
  {field} message_id: BIGINT <<FK>>
  {field} user_id: BIGINT <<FK>>
  {field} stream_token: VARCHAR(64) <<UK>>
  {field} status: ENUM(active, stopped, completed)
  {field} created_at: TIMESTAMP
  {field} expires_at: TIMESTAMP
  {field} updated_at: TIMESTAMP
}

class usage_logs as "📊 LOGS_UTILISATION" {
  {id} id: BIGINT <<PK>> <<NOUVEAU>>
  {field} user_id: BIGINT <<FK>>
  {field} message_id: BIGINT <<FK>>
  {field} model_id: BIGINT <<FK, NULL>>
  {field} prompt_tokens: INT
  {field} completion_tokens: INT
  {field} total_tokens: INT
  {field} estimated_cost: DECIMAL(10,6) <<NULL>>
  {field} created_at: TIMESTAMP
  {field} updated_at: TIMESTAMP
}

class conversation_participants as "👥 PARTICIPANTS_CONVERSATION" {
  {id} id: BIGINT <<PK>> <<NOUVEAU>>
  {field} conversation_id: BIGINT <<FK>>
  {field} user_id: BIGINT <<FK>>
  {field} role: ENUM(owner, viewer, editor)
  {field} joined_at: TIMESTAMP
  {field} created_at: TIMESTAMP
  {field} updated_at: TIMESTAMP
}

' ==================== RELATIONS ====================

users ||--o{ conversations: "crée"
users ||--o{ custom_instructions: "définit"
users ||--o{ api_keys: "stocke"
users ||--o{ usage_logs: "génère"
users ||--o{ streaming_sessions: "initie"

conversations ||--o{ messages: "contient"
conversations ||--o{ conversation_participants: "a"
conversations }o--|| llm_models: "utilise (sélectionné)"

messages }o--|| llm_models: "généré par"
messages ||--o{ streaming_sessions: "suivi dans"

custom_instructions }o--|| llm_models: "s'applique à\n(optionnel)"

llm_models ||--o{ model_configs: "configuré via"
llm_models ||--o{ usage_logs: "mesuré par"

' ==================== ANNOTATIONS ====================

note right of conversations
  **Modèle de Suppression Logique**
  deleted_at pour suppression logique
  Préserve la piste d'audit
end note

note right of messages
  **Support du Streaming**
  status suit l'état de la génération
  completed_at mesure la durée réelle
  finished_reason suit la raison API
end note

note right of custom_instructions
  **Instructions Flexibles**
  model_id NULL = global (tous modèles)
  model_id NOT NULL = spécifique au modèle
  priority définit l'ordre d'application
end note

note right of streaming_sessions
  **Critique pour la Fonctionnalité**
  Gère les sessions SSE/WebSocket
  stream_token identifie le flux unique
  expires_at prévient les fuites mémoire
end note

note right of api_keys
  **Sécurité**
  encrypted_key stockée de manière sécurisée
  key_hint pour affichage (non-sensible)
  contrainte unique(user_id, provider)
end note

note right of usage_logs
  **Analytics et Facturation**
  Suit la consommation de tokens par user/modèle
  estimated_cost pour facturation future
  Permet des rapports détaillés
end note

note left of users
  **LÉGENDE**

  <<PK>> = Clé primaire
  <<FK>> = Clé étrangère
  <<UK>> = Contrainte unique
  <<NOUVEAU>> = Ajouté dans cette révision
  <<MODIFIÉ>> = Modifié par rapport à l'original
  <<NULL>> = Nullable
  <<DEFAULT>> = Valeur par défaut

  **Améliorations Clés (Analyse Sonnet)**
  • Tables/champs de streaming pour chat temps réel
  • Index de performance sur requêtes fréquentes
  • Support multi-table pour analytics
  • Prêt pour collaboration multi-utilisateurs

  **Score de Conformité**
  Avant: 68/100 → Après: 90/100
end note

@enduml
